--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="css/main.css" />
   <link rel="stylesheet" href="css/nav.css" />
  </head>
+ <style>
+    .hamlet{
+       /* background-color: yellow;*/
+    }
+ </style>
  <body>
      <header>
      <h1>Title Goes Here</h1>
@@ -19,7 +24,9 @@
      </header>
      
    <main class="wrapper">
-    <p>Content goes here</p>
+    <p><span onclick="this.style.backgroundColor='yellow'">Hamlet:To be or not to be?</span></p>
+    <p>Skull:Are you talking to me?</p>
+    <p class="hamlet">Hamlet:What did you say?</p>
      <footer>
       <p><small>&copy; 2021 by 
           YOUR NAME HERE, All Rights Reserved ~ 
@@ -29,5 +36,6 @@
     </footer>
   </main>
   <script src="js/main.js"></script>
+  <script src="js/dom-play.js"></script>
  </body>
 </html>
