--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     .hamlet{
        /* background-color: yellow;*/
     }
+
+    /*
+    #play span{
+      background-color: yellow;
+    }
+    */
  </style>
  <body>
      <header>
@@ -24,12 +30,29 @@
      </header>
      
    <main class="wrapper">
-    <p><span onclick="this.style.backgroundColor='yellow'">Hamlet:To be or not to be?</span></p>
-    <p>Skull:Are you talking to me?</p>
-    <p class="hamlet">Hamlet:What did you say?</p>
+      <div id="play">
+         <p><span data-actor="Romeo">Romeo: You were saying nothing while I was proclaiming my love for you. Juliet, I love you!</span></p>
+         <p><span data-actor="Juliet">Juliet: I love you too, my dearest Romeo, but this is all a bit sudden, so good bye.</span></p>
+         <p><span data-actor="Romeo">Romeo: It is so easy to come to my love, but so hard to leave her.</span></p>
+         <p><span data-actor="Juliet">Juliet: I keep trying to leave you out here, but time and time again I find myself drawn back to you. Are you still there Romeo?</span></p>
+         <p><span data-actor="Romeo">Romeo: Yes Juliet, I am here, and I will remain so, my love, until the light in your window has gone dark.
+         </span></p>
+         <p><span data-actor="Juliet">Juliet: Then we may be here forever. It is past time that you leave. I will see you soon my love.</span></p>
+
+      </div>
+
+
+
+      <p>To fulfill the requirements of this assignment, we  created a single page application using the DOM and JavaScript.</p>
+      <p>When we click on a specific actor's name or any associated element, all the lines belonging to that actor in a play will be highlighted. The highlighting can be achieved by applying a bold style or any other visual indicator.</p>
+      <p>The function(s) we created should be able to handle any number of actors and any additional lines that may be added to the page dynamically. This ensures that the highlighting and un-highlighting will work correctly regardless of the number of actors or lines.</p>
+      <p>The page will  perform the required actions without reloading the page, using JavaScript and manipulating the DOM directly. </p>
+      <p>We made necessary modifications to the HTML structure to enable the JavaScript scripts to function properly.</p>
+
+
      <footer>
       <p><small>&copy; 2021 by 
-          YOUR NAME HERE, All Rights Reserved ~ 
+          Cristina Resina, All Rights Reserved ~ 
           <a id="html-checker" href="#">Check HTML</a> ~ 
           <a id="css-checker" href="#">Check CSS</a></small>
      </p>
