--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
      
    <main class="wrapper">
       <div id="play">
-         <p><span data-actor="Romeo">Romeo: You were saying nothing while I was proclaiming my love for you. Juliet, I love you!</span></p>
-         <p><span data-actor="Juliet">Juliet: I love you too, my dearest Romeo, but this is all a bit sudden, so good bye.</span></p>
-         <p><span data-actor="Romeo">Romeo: It is so easy to come to my love, but so hard to leave her.</span></p>
-         <p><span data-actor="Juliet">Juliet: I keep trying to leave you out here, but time and time again I find myself drawn back to you. Are you still there Romeo?</span></p>
-         <p><span data-actor="Romeo">Romeo: Yes Juliet, I am here, and I will remain so, my love, until the light in your window has gone dark.
+         <p><span data-actor="Romeo">Romeo: You were saying nothing while<br> I was proclaiming my love for you.<br> Juliet, I love you!</span></p>
+         <p><span data-actor="Juliet">Juliet: I love you too, my dearest Romeo,<br> But this is all a bit sudden,<br>So good bye.</span></p>
+         <p><span data-actor="Romeo">Romeo: It is so easy to come to my love,<br>But so hard to leave her.</span></p>
+         <p><span data-actor="Juliet">Juliet: I keep trying to leave you out here, <br>But time and time again I find myself drawn back to you. <br>Are you still there Romeo?</span></p>
+         <p><span data-actor="Romeo">Romeo: Yes Juliet, I am here, and I will remain so,<br> My love, until the light in your window has gone dark.
          </span></p>
-         <p><span data-actor="Juliet">Juliet: Then we may be here forever. It is past time that you leave. I will see you soon my love.</span></p>
+         <p><span data-actor="Juliet">Juliet: Then we may be here forever.<br> It is past time that you leave.<br> I will see you soon my love.</span></p>
 
       </div>
 
